# WorkingSystemApp

./: .gitignore  README.md  RELEASE_SETUP.md  WORKFLOW_ARCHITECTURE.md  pubspec.yaml
.github/workflows/: publish.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/Others/: Constant.dart  Utils.dart  constant.dart  utils.dart
lib/Pages/: ApplicationGigDetails.dart  AttendanceList.dart  FindWorks.dart  GigDetail.dart  GigDetailsNoButton.dart  Login.dart  MyApplications.dart  Notification.dart  Personal.dart  Register.dart  Reviews.dart  Schedule.dart  ScheduleGigDetails.dart  TakeAttendance.dart  UpdateUserInfo.dart  UpdateUserPassword.dart  ViewConflict.dart  application_gig_details.dart  attendance_list.dart  find_works.dart  gig_detail.dart  gig_details_no_button.dart  login.dart  my_applications.dart  notification.dart  personal.dart  register.dart  reviews.dart  schedule.dart  take_attendance.dart  update_user_info.dart  update_user_password.dart  view_conflict.dart
lib/Services/: FCMService.dart  NotificationManager.dart  fcm_service.dart  notification_manager.dart
lib/Types/: ApplicationGig.dart  ApplicationPagination.dart  AttendanceGigInfo.dart  AttendanceGigInfo.g.dart  AttendanceToday.dart  AttendanceToday.g.dart  CustomAppointment.dart  DescriptionType.dart  DescriptionType.freezed.dart  DescriptionType.g.dart  Employer.dart  Employer.g.dart  EmployerPhoto.dart  (+35 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: captcha.rs  core.rs  images.rs  mod.rs  password_reset.rs  websocket.rs
rust_builder/: pubspec.yaml
scripts/: setup_keystore_secret.sh  verify_firebase_secrets.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+264 files in other folders)
