[package]
name = "rust_lib_working_system_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
ezsockets = "0.7.0"
flutter_rust_bridge = "=2.11.1"
image = "0.25.8"
tokio = { version = "1.48.0", features = ["time"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
